// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="Home mt-5 pt-5"
  >
    <h1
      class="Home-title display-1 text-center pt-5"
    >
      Welcome testfirst!
    </h1>
  </div>
</DocumentFragment>
`;

exports[`Home Component matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div
    class="Home mt-5 pt-5"
  >
    <h1
      class="Home-title display-1 text-center pt-5"
    >
      <span>
        Welcome To
      </span>
      <p
        class="logo"
      >
        DreamHost
      </p>
    </h1>
  </div>
</DocumentFragment>
`;
